# server-linux

./: .env.example  ADVANCED_FEATURES_COMPLETE.md  COMPILATION_FIXES.md  COMPREHENSIVE_DOCUMENTATION.md  CONTINUOUS_IMPROVEMENTS_LOG.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_SYSTEM_SUMMARY.md  FINAL_COMPILATION_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  README.md  RESTAURANT_MANAGEMENT_COMPLETION.md  STATUS_UPDATE.md  WEBSOCKET_DEVELOPMENT_SUMMARY.md  build-linux.sh  test_server_simple.py  test_startup.ps1
.cargo/: config.toml
.github/workflows/: build.yml
docs/: API_REFERENCE.md  COMPLETE_DOCUMENTATION.md  DELIVERY_API.md  DEPLOYMENT_GUIDE.md  INDIA_FEATURES.md
migrations/: 001_initial_schema.sql  002_update_restaurant_schema.sql
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  routes.rs  server.rs
src/analytics/: handlers.rs  mod.rs  models.rs  service.rs
src/auth/: firebase.rs  middleware.rs  mod.rs  models.rs
src/cache/: mod.rs  models.rs  redis_cache.rs  service.rs
src/database/: mod.rs
src/delivery/: enhanced_handlers.rs  enhanced_service.rs  handlers.rs  metrics.rs  mod.rs  models.rs  service.rs  tests.rs  websocket.rs  websocket_handlers.rs
src/docs/: generator.rs  mod.rs  models.rs  swagger.rs
src/india/: config.rs  handlers.rs  mod.rs  payments.rs
src/metrics/: mod.rs
src/middleware/: performance.rs
src/monitoring/: alerts.rs  health.rs  metrics.rs  mod.rs  service.rs
src/notifications/: fcm.rs  mod.rs  models.rs
tests/: india_features_test.rs  integration_tests.rs  load_tests.rs  performance_tests.rs
(+17 files in other folders)
