[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1"
axum = { version = "0.8.4", features = ["http2", "ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.0"
bytes = "1.0"
jsonwebtoken = "9.3.1"
quinn = { version = "0.11.9", features = ["rustls"] }
reqwest = { version = "0.12.23", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
prometheus = "0.13"
base64 = "0.21"
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
bincode = "2.0.1"
